few refactor